--- a/remote_Job/template/account/employee-edit-profile.html
+++ b/remote_Job/template/account/employee-edit-profile.html
@@ -52,9 +52,9 @@
         {% endfor %}
         {% endif %}
         <form method="POST" enctype="multipart/form-data" class="p-4 border rounded" style="background-color: #ffffff; position: relative;">
-          <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
+          <!-- <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
           <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
-          
+           -->
           <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
             <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
             <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
