--- a/remote_Job/template/account/password_reset_confirm.html
+++ b/remote_Job/template/account/password_reset_confirm.html
@@ -27,25 +27,25 @@
                         {% csrf_token %}
                         <div class="form-group">
                             {{ form.new_password1.label_tag }}
-                            <div class="input-group">
-                                {{ form.new_password1 }}
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
-                                        <span class="fa-solid fa-eye " id="eyeIcon" style="color: #6a6161;"></span>
-                                    </button>
+                                <div class="input-group">
+                                    {{ form.new_password1 }}
+                                    <div class="input-group-append">
+                                        <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ form.new_password1.name }}', 'eyeIcon1')">
+                                            <span class="fa-solid fa-eye " id="eyeIcon1" style="color: #6a6161;"></span>
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
-                            
-                        
-                            {{ form.new_password2.label_tag }}
-                            <div class="input-group">
-                                {{ form.new_password2 }}
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
-                                      <i class="fa-solid fa-eye " id="eyeIcon" style="color: #6a6161;"></i> 
-                                    </button> 
-                                  </div>
-                            </div>
+                                
+                                {{ form.new_password2.label_tag }}
+                                <div class="input-group">
+                                    {{ form.new_password2 }}
+                                    <div class="input-group-append">
+                                        <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ form.new_password2.name }}', 'eyeIcon2')">
+                                            <i class="fa-solid fa-eye " id="eyeIcon2" style="color: #6a6161;"></i> 
+                                        </button> 
+                                    </div>
+                                </div>
+                            <!-- </div> -->
                           
                         </div>
                         
@@ -61,3 +61,5 @@
     </div>
 
 {% endblock %}
+
+
