--- a/remote_Job/template/account/employer-registration.html
+++ b/remote_Job/template/account/employer-registration.html
@@ -40,15 +40,16 @@
                             {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
                         </label>
                         {% if field.field.widget.input_type == 'password' %}
-                            <div class="input-group">
-                                <input type="password" class="form-control" name="{{ field.name }}"
-                                    id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
-                                    <div class="input-group-append">
-                                      <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}')">
-                                        <i class="fa-solid fa-eye" id="eyeIcon" style="color: #6a6161;"></i> 
-                                      </button> 
-                                    </div>
-                            </div>
+                        <div class="input-group">
+                          <input type="password" class="form-control {% if forloop.counter == 1 %}password{% elif forloop.counter == 2 %}confirm-password{% endif %}" 
+                              name="{{ field.name }}" id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                          
+                          <div class="input-group-append">
+                              <button type="button" class="btn btn-outline-eye" onclick="togglePassword('id_{{ field.name }}', 'eyeIcon{{ forloop.counter }}')">
+                                  <i class="fa-solid fa-eye " id="eyeIcon{{ forloop.counter }}" style="color: #6a6161;"></i> 
+                              </button> 
+                          </div>
+                      </div>
                         {% else %}
                             <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
                                 id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
