--- a/remote_Job/template/scripts.html
+++ b/remote_Job/template/scripts.html
@@ -16,18 +16,16 @@
  
     <script src="{% static 'js/custom.js' %}"></script> 
     <script>
-        function togglePassword(fieldId, eyeIconId) {
-      var eyeIcon = document.getElementById(eyeIconId);
-  
-      // Check the current icon class
-      var isEye = eyeIcon.classList.contains('fa-eye');
+        const togglePassword = document.querySelector('#togglePassword');
+        const password = document.querySelector('#id_password');
       
-      const passwordField = document.getElementById(fieldId);
-      const fieldType = isEye ? 'text' : 'password';
-      passwordField.type = fieldType;
+        togglePassword.addEventListener('click', function (e) {
+            // Toggle the type attribute
+            const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+            password.setAttribute('type', type);
       
-      // Toggle the eye icon classes
-      eyeIcon.classList.toggle('fa-eye', !isEye);
-      eyeIcon.classList.toggle('fa-eye-slash', isEye);
-    }
+            // Toggle the eye icon classes
+            this.classList.toggle('fa-eye');
+            this.classList.toggle('fa-eye-slash');
+        });
       </script>
