--- a/remote_Job/template/jobapp/all-applicants.html
+++ b/remote_Job/template/jobapp/all-applicants.html
@@ -29,7 +29,9 @@
                                     <th>Name</th>
                                     <th>Job Title</th>
                                     <th>Applied Date</th>
+                                    <th>Status</th>
                                     <th>View </th>
+                                    
                         
                                 </tr>
                             </thead>
@@ -38,15 +40,30 @@
                         {{ applicant.get_total_applicant }}
 
                                 <tr>
-                                    <td class="text-center"><a href="{% url 'jobapp:applicant-details' applicant.user.id %}">{{ applicant.user.get_full_name }}</a></td     >
+                                    <td class="text-center"><a href="{% url 'jobapp:applicant-details' applicant.user.id %}?job_title={{ applicant.job.title }}">{{ applicant.user.get_full_name }}</a></td     >
                                     <td>{{ applicant.job.title }}</td>
                                     <td>{{ applicant.timestamp }}</td>
                                     <td>
-                                        <a class="btn btn-info btn-sm" href="{% url 'jobapp:applicant-details' applicant.user.id %}"
+                                        {% if applicant.status == "Selected" %}
+                                
+                                        <span class="badge badge-success">Selected</span>
+                                
+                                    {% elif applicant.status == "Rejected" %}
+
+                                        <span class="badge badge-danger px-2">Rejected</span>
+                                    {% else %}
+
+                                    <span class="badge badge-info px-2">Pending</span>
+
+                                    {% endif %}
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-info btn-sm" href="{% url 'jobapp:applicant-details' applicant.user.id %}?job_title={{ applicant.job.title }}"
                                                 role="button">
                                             Click
                                         </a>
                                     </td>
+                                    
 
                                 </tr>
                                 {% endfor %}
