--- a/remote_Job/template/jobapp/terms-condition.html
+++ b/remote_Job/template/jobapp/terms-condition.html
@@ -24,7 +24,7 @@
                 href="https://www.youtube.com/watch?v=vTWywg4DVpg&pp=ygUhbWFpbnRhaW4gcHJpdmFjeSB3aGlsZSBkb2luZyBqb2Ig"
                 class="block__96788">
                 <span class="play-icon"><span class="icon-play"></span></span>
-                <img src="{% static 'images/term.jpg' %}" alt="Image" class="img-fluid img-shadow" style="height: 450px; width: 550px;">
+                <img src="{% static 'images/term.JPG' %}" alt="Image" class="img-fluid img-shadow" style="height: 450px; width: 550px;">
             </a>
         </div>
         <!-- Video Section 2 (Right Side) -->
@@ -33,7 +33,7 @@
                 href="https://www.youtube.com/watch?v=7dXwcm-WCEo&pp=ygUhbWFpbnRhaW4gcHJpdmFjeSB3aGlsZSBkb2luZyBqb2Ig"
                 class="block__96788">
                 <span class="play-icon"><span class="icon-play"></span></span>
-                <img src="{% static 'images/terms.jpg' %}" alt="Image" class="img-fluid img-shadow" style="height: 450px; width: 550px;" >
+                <img src="{% static 'images/terms.JPG' %}" alt="Image" class="img-fluid img-shadow" style="height: 450px; width: 550px;" >
             </a>
         </div>
     </div>
