--- a/remote_Job/template/scripts.html
+++ b/remote_Job/template/scripts.html
@@ -15,7 +15,7 @@
     <script>window.CKEDITOR_BASEPATH = '/static/ckeditor/ckeditor/';</script> 
  
     <script src="{% static 'js/custom.js' %}"></script> 
-    <script>
+    <!-- <script>
         const togglePassword = document.querySelector('#togglePassword');
         const password = document.querySelector('#id_password');
       
@@ -28,4 +28,4 @@
             this.classList.toggle('fa-eye');
             this.classList.toggle('fa-eye-slash');
         });
-      </script>
+      </script> -->
