--- a/remote_Job/template/account/employer-registration.html
+++ b/remote_Job/template/account/employer-registration.html
@@ -71,15 +71,19 @@
 </section>
 
 <script>
-  function togglePassword(fieldId) {
-    var eyeIcon = document.getElementById('eyeIcon');
+  function togglePassword(inputId, eyeIconId) {
+      var passwordInput = document.getElementById(inputId);
+      var eyeIcon = document.getElementById(eyeIconId);
 
-    // Check the current color
-    var currentColor = eyeIcon.style.color;
-
-    const passwordField = document.getElementById(fieldId);
-    const fieldType = passwordField.type === 'password' ? 'text' : 'password';
-    passwordField.type = fieldType;
+      if (passwordInput.type === "password") {
+          passwordInput.type = "text";
+          eyeIcon.classList.remove("fa-eye");
+          eyeIcon.classList.add("fa-eye-slash");
+      } else {
+          passwordInput.type = "password";
+          eyeIcon.classList.remove("fa-eye-slash");
+          eyeIcon.classList.add("fa-eye");
+      }
   }
 </script>
 
